tests/struct/bad/struct_duplicate.catala_en
```catala
declaration structure Str:
  data fld1 content integer
  data fld2 content money
  data fld3 content date

declaration scope S:
  internal s0 content Str
  output s1 content Str

scope S:
  definition s0 equals
    Str {
      -- fld1: 0
      -- fld2: $1
      -- fld3: |2003-01-01|
    }
  definition s1 equals s0 but replace { -- fld1: 0 -- fld1: 2 }
```

```catala-test-cli
$ catala test-scope S2
┌─[ERROR]─
│
│  Duplicate redefinition of field fld1.
│
├─➤ tests/struct/bad/struct_duplicate.catala_en:18.55-18.59:
│    │
│ 18 │   definition s1 equals s0 but replace { -- fld1: 0 -- fld1: 2 }
│    │                                                       ‾‾‾‾
└─
#return code 123#
```
